--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "categorize-files",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Categorize given files by extensions",
   "main": "index.js",
   "scripts": {
@@ -14,9 +14,9 @@
     "extensions"
   ],
   "repository": {
-    "url": "git@github.com:azer\/categorize-files.git",
+    "url": "git@github.com:azer/categorize-files.git",
     "type": "git"
   },
-  "author": "Azer Ko\u00e7ulu <azer@kodfabrik.com>",
+  "author": "Azer Koçulu <azer@kodfabrik.com>",
   "license": "BSD"
 }
